--- a/src/main/resources/application-dev-environment.properties
+++ b/src/main/resources/application-dev-environment.properties
@@ -2,7 +2,7 @@ mongo_url=mongodb://localhost:27017
 mongo.database=test
 
 postgres_username=postgres
-postgres_password=komunist
+postgres_password=admin
 postgres_url=jdbc:postgresql://localhost:5432/milove
 
 port=6060
