--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -1,10 +1,3 @@
-# PostgreSQL database properties
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
-
-#spring.jpa.hibernate.ddl-auto=create
-spring.jpa.show-sql=true
-#spring.jpa.properties.hibernate.format_sql=true
-
-spring.datasource.url=jdbc:postgresql://localhost:5432/milove
-spring.datasource.username=postgres
-spring.datasource.password=admin
+POSTGRES_CONTAINER_VERSION=postgres:15.8-alpine
+POSTGRES_CONTAINER_USERNAME=postgres
+POSTGRES_CONTAINER_PASSWORD=postgres
