--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -17,18 +17,8 @@ spring:
       repositories:
         type: auto
     jpa:
-
       repositories:
         enabled: true
-  jpa:
-    properties:
-      hibernate:
-
-    show-sql: true
-  #    open-in-view: false
-
-  mvc:
-    throw-exception-if-no-handler-found: true
 
   datasource:
     driver-class-name: org.postgresql.Driver
@@ -68,6 +58,16 @@ server:
     key-alias: tomcat
 
 logging:
+  level:
+    root: INFO
+    gov.milove: INFO
+  pattern:
+    console: "%d{yyyy-MM-dd'T'HH:mm} [%X{traceId}] %-5level %logger{36} - %msg%n"
+    file: "%d{yyyy-MM-dd'T'HH:mm} [%X{traceId}] %-5level %logger{36} - %msg%n"
   file:
-    path: logs
-    
+    name: logs/application.log
+  logback:
+    rollingpolicy:
+      max-file-size: 10MB
+      max-history: 30
+      file-name-pattern: logs/application.%d{yyyy-MM-dd}.%i.log
